# geo1015.2022_prac

./: .gitignore
hw/02/cpp/python_bin/: sunpos.py
hw/02/python/: my_code_hw02.py
hw/04/cpp/: CMakeLists.txt
hw/04/cpp/src/: DatasetASC.cpp  DatasetASC.h  GroundFilter.cpp  GroundFilter.h  main.cpp  nni.cpp  nni.h
